frontend/test/should_fail/set_002.grg
using set_model_001;

rule assignWrongType {
	a:A;
	
	modify {
		eval {
			a.intSet = a.intSet | set<int>{ a.stringValue };
		}
	}
}